# LCMHalMCPServer

./: .gitignore  README.md  README_STRUCTURE.md  TEST_SUMMARY_REPORT.md  ZEPHYR_DRIVER_TESTING_GUIDE.md  codeql_mcp.py  fix_config.py  hal_uart_analysis.md  hal_uart_transmit_it_analysis.md  index.html  install.sh  irq_handler_analysis.md  lcmcodeql_mcp.py  lcmhal  main.py  main_test_report.md  run_nxp_emulate_only.py  server.py  setup_linux.sh  simple_test.ql  stat_out.json  stat_output.json  stm32_driver_analysis_error_report.md  stm32_peripheral_analysis_20251226_050246.json  sync-skills.sh  test.ql  test.sh  test_builder_tool.py  test_compression.py  test_decode_fix.py  test_find_main_func.py  test_fix.py  test_function_info.py  test_langgraph_logging.py  test_list_files.py  test_mcp_direct.py  test_mcp_fixed.py  test_mcp_server_startup.py  test_minimal_error.py  test_recover_fix.py  (+4 more)
--help/: lcmhal_config.yml
.opencode/: package-lock.json
agents/: analyzer_agent.py  builder_agent.py  builder_fixer_agent.py  driver_locator_agent.py  emulator_runner_agent.py  fixer_agent.py
analysis_results/: analysis_summary.txt  comprehensive_analysis.json  stm32_four_drivers_analysis_summary.md
backup_20260122_150735/: globs.py  mcp_server.py
case_study/: fatfs_classifier_replacements_202603.md
codeql_scripts/: DriverLocator.qll  codeql-pack.yml  driver_info_driverfromdeclstmt_collector.ql  driver_info_driverfromexpr_collector.ql  driver_info_driverfromfunction_collector.ql  driver_info_driverfromfunctioncall_collector.ql  driver_info_driverfromfunctioncontains_collector.ql  driver_info_driverfromglobalvariable_collector.ql  driver_info_drivertofunctioncall_collector.ql  info_buffer_function_collector.ql  info_driver_function_collector.ql  info_function_call_collector.ql  info_function_collector.ql  info_mmio_function_collector.ql  mmio_structure_finder.ql  mmioinfo_functioncontains.ql  mmioinfo_interestingmmioexpr_collector.ql  mmioinfo_interestingmmiofunccontains_collector.ql  mmioinfo_mmioexpr_collector.ql  test_driver_mmio_expr.ql  test_driverfrom_mmio.ql  test_driverfrom_variable_call.ql  test_mmio_operation_patch.ql  test_mmiointerestingexpr.ql  test_none_file_function_finder.ql  test_vul_1.ql  tool_dataflow_trace.ql  tool_func_filter.ql  tool_func_mmioexpr_test.ql  tool_function_finder.ql
config/: collector_infos.py  globs.py  globs.py.backup2  model_singleton.py
core/: __init__.py  data_manager.py
deprecated/: analyzer.py  emulator_agent.py  fixer.py
doc/: 20260318_driver_function_identification_from_mmio.md  20260318_driver_function_replacement_strategy_design.md  20260318_mmio_instance_location_patterns.md  20260319_dynamic_test_feedback_closed_loop_agent_workflow.md  20260319_functionclassifier-verifyreplacement-buildfixer-workflow.md  20260319_simulation_execution_platform_module.md  ARCHITECTURE.md  NXP_LwIP_BareMetal_ENET_DMA_RingBuffer_recv.md  NXP_LwIP_BareMetal_emulate_fixes_summary.md  PAPER_SYSTEM_DESIGN.md  THESIS_CH3_系统设计与实现.md  driver_function_replacement_strategy_design.md  fatfs_SystemClock_Config_log_analysis.md  fatfs_build_errors_202603.md  fuzzemu_execution_flow.md  fuzzemu_vfp_skip_design.md  lwip_eth_irq_analysis.md  mmio_ablation_experiment_design.md  openclaw_feishu_openclaw_integration.md  replacement_update_casebook.md  replacement_update_casebook_detailed.md  中期报告.md
docs/: automated_compilation_emulation_fix.md  automated_compilation_emulation_fix_code_and_flow.md  codeql_mmio_analysis_implementation.md  llm_driver_analysis_implementation.md
lcmhal_failcheck_logs/: diff_HAL_ADC_Start_DMA_20260216_105029.txt  diff_HAL_DCMI_Start_DMA_20260216_105029.txt  diff_HAL_DMA_Start_IT_20260216_105029.txt  diff_HAL_ETH_Init_20260216_105029.txt  diff_HAL_ETH_MspInit_20260216_105029.txt  diff_HAL_ETH_ReadData_20260216_105029.txt  diff_HAL_ETH_Transmit_20260216_105029.txt  diff_HAL_ETH_Transmit_IT_20260216_105029.txt  diff_HAL_I2C_Master_Receive_20260216_105029.txt  diff_HAL_I2C_Master_Transmit_20260216_105029.txt  diff_HAL_RCC_ClockConfig_20260216_105029.txt  diff_HAL_RCC_OscConfig_20260216_105029.txt  diff_HAL_UART_Transmit_20260216_105029.txt  diff_I2C_WaitOnFlagUntilTimeout_20260216_105029.txt  diff_I2C_WaitOnRXNEFlagUntilTimeout_20260216_105029.txt  diff_I2C_WaitOnSTOPFlagUntilTimeout_20260216_105029.txt  diff_I2C_WaitOnTXISFlagUntilTimeout_20260216_105029.txt  diff_SystemClock_Config_20260216_105029.txt  diff_complex_mmio_operation_20260122_154434.txt  diff_complex_mmio_operation_20260123_023854.txt  diff_complex_mmio_operation_20260123_024323.txt  diff_complex_mmio_operation_20260123_025311.txt  diff_loop_mmio_operation_20260122_154434.txt  diff_mmio_uart_receive_byte_direct_20260122_154434.txt
prompts/: builder_fixer.py  code_generation_rules.md  diff_generater.py  driverdir_locator.py  emulator_multiagent.py  function_classifier.py  function_fixer.py  function_generator.py  project_builder.py  project_emulator.py  public.py  replacement_rubric_checker.py  summary_prompt.py
queries/: codeql-pack.lock.yml  (+4 more)
queries-backup-local/: codeql-pack.yml  test_simple.ql  tool_function_caller_finder.ql
queries.backup/: codeql-pack.yml  info_function_registered_used.ql  struct_finder.ql  tool_func_mmioexpr_test.ql
testcases/uart_driver/src/: CMakeLists.txt  build_codeql.sh  linker.ld  test_arm_zephyr.c  test_arm_zephyr_fixed.c  test_mmio_driver.c  test_zephyr_simple.c  test_zephyr_uart.c
testcases/zephyr/zephyr_ble_official_contrib/src/: CMakeLists.txt  linker.ld  main.c  startup_nrf52840.s  syscalls.c
testcases/zephyr/zephyr_eth_official_contrib/src/: CMakeLists.txt  linker.ld  main.c  startup_stm32f746xx.s  syscalls.c
testcases/zephyr/zephyr_flash_official_contrib/src/: CMakeLists.txt  CMakeLists_flash.cmake  compile_commands.json  linker.ld  main.c  startup_stm32f103c8tx.s  syscalls.c
testcases/zephyr/zephyr_uart_official_contrib/src/: CMakeLists.txt  linker.ld  main.c  toolchain.cmake
testcases/zephyr_eth_official/src/: CMakeLists.txt  main.c  prj.conf  prj.conf.backup3
testcases/zephyr_uart_official/src/: CMakeLists.txt  main.c
(+4634 files in other folders)
